add_library(VIIIKernel
        AbilitiesT.cpp
        AbilitiesT.h
        AttackFlagsT.cpp
        AttackFlagsT.h
        AttackTypeT.cpp
        AttackTypeT.h
        BattleCommands.cpp
        BattleCommands.h
        BattleItems.cpp
        BattleItems.h
        BattleOnlyStatusesT.cpp
        BattleOnlyStatusesT.h
        CameraChangeT.cpp
        CameraChangeT.h
        CharacterAbilities.cpp
        CharacterAbilities.h
        Characters.cpp
        Characters.h
        CommandAbilities.cpp
        CommandAbilities.h
        CommandAbilitiesData.cpp
        CommandAbilitiesData.h
        CrisisLevelT.cpp
        CrisisLevelT.h
        Devour.cpp
        Devour.h
        ElementT.cpp
        ElementT.h
        EnemyAttacks.cpp
        EnemyAttacks.h
        GenderT.cpp
        GenderT.h
        GFAbilities.cpp
        GFAbilities.h
        GFGroup.cpp
        GFGroup.h
        Header.cpp
        Header.h
        IrvineShotLimitBreak.cpp
        IrvineShotLimitBreak.h
        JunctionAbilities.cpp
        JunctionAbilities.h
        JunctionableGFs.cpp
        JunctionableGFs.h
        JunctionFlagsT.cpp
        JunctionFlagsT.h
        JunctionStatusesT.cpp
        JunctionStatusesT.h
        Magic.cpp
        Magic.h
        MenuAbilities.cpp
        MenuAbilities.h
        Misc.cpp
        Misc.h
        MiscText.cpp
        MiscText.h
        NonBattleItems.cpp
        NonBattleItems.h
        NonJunctionableGFs.cpp
        NonJunctionableGFs.h
        PartyAbilities.cpp
        PartyAbilities.h
        PersistentStatusesT.cpp
        PersistentStatusesT.h
        QuistisBlueMagicLimitBreak.cpp
        QuistisBlueMagicLimitBreak.h
        QuistisBlueMagicLimitBreakParams.cpp
        QuistisBlueMagicLimitBreakParams.h
        RenzokukenFinishers.cpp
        RenzokukenFinishers.h
        RenzokukenFinishersT.cpp
        RenzokukenFinishersT.h
        RinoaLimitBreakPart1.cpp
        RinoaLimitBreakPart1.h
        RinoaLimitBreakPart2.cpp
        RinoaLimitBreakPart2.h
        SectionData.cpp
        SectionData.h
        SectionTypesT.cpp
        SectionTypesT.h
        SequenceAndTimer.cpp
        SequenceAndTimer.h
        SlotsArray.cpp
        SlotsArray.h
        SlotsSets.cpp
        SlotsSets.h
        StatGroup.cpp
        StatGroup.h
        StatGroupNoEVANoHIT.cpp
        StatGroupNoEVANoHIT.h
        StatT.cpp
        StatT.h
        TargetT.cpp
        TargetT.h
        TeamLagunaLimitBreaks.cpp
        TeamLagunaLimitBreaks.h
        UnlockableAbility.cpp
        UnlockableAbility.h
        UnlockerT.cpp
        UnlockerT.h
        Weapons.cpp
        Weapons.h
        ZellDuelLimitBreak.cpp
        ZellDuelLimitBreak.h
        )
set_target_properties(VIIIKernel PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(VIIIKernel)